# vksEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: Application.cpp  Application.h  ImGuiHandler.cpp  ImGuiHandler.h  VKSEngine.h  VulkanHandler.cpp  VulkanHandler.h  Window.cpp  Window.h
app/handlers/: ImGuiHandler.cpp  ImGuiHandler.h  ImNodesHandler.cpp  ImNodesHandler.h  InputHandler.cpp  InputHandler.h  VulkanHandler.cpp  VulkanHandler.h
app/objects/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.cpp  Vertex.h
app/objects/input/: Button.cpp  Button.h  Key.cpp  Key.h
app/objects/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
app/objects/menus/: ComponentMenu.h  DirectionalLightMenu.cpp  DirectionalLightMenu.h  Menu.cpp  Menu.h  MeshMenu.cpp  MeshMenu.h  PointLightMenu.cpp  PointLightMenu.h
app/objects/mesh/: Mesh.cpp  Mesh.h  MeshType.h
app/objects/texture/: Texture.cpp  Texture.h  TextureOrigin.h  TextureType.cpp  TextureType.h
app/objects/timer/: Clock.cpp  Clock.h  TimeType.h
app/scene/: FileExplorer.cpp  FileExplorer.h  IdManager.cpp  IdManager.h  Scene.cpp  Scene.h  SceneComponent.h
app/scene/components/: ComponentEntry.h  ComponentType.cpp  ComponentType.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightComponent.cpp  PointLightComponent.h
app/scene/menus/: MaterialEditorMenu.cpp  MaterialEditorMenu.h  SceneComponentPropertiesMenu.cpp  SceneComponentPropertiesMenu.h  SceneComponentsMenu.cpp  SceneComponentsMenu.h  SceneEventsMenu.cpp  SceneEventsMenu.h  SceneFunctionsMenu.cpp  SceneFunctionsMenu.h  SceneInfoMenu.cpp  SceneInfoMenu.h
app/scene/ubocomponents/: UBOcounters.h  UBOmvp.h  UBOvp.h
app/shaders/: compile.bat
app/shaders/compiled/: ComplexMeshShaderFrag.spv
app/shaders/compiled/complexmesh/: ComplexMeshShaderFrag.spv  ComplexMeshShaderVert.spv
app/shaders/compiled/simplemesh/: SimpleMeshShaderFrag.spv  SimpleMeshShaderVert.spv
app/shaders/glsl/: ComplexMeshShader.frag  SimpleMeshShader.vert
app/shaders/glsl/complexmesh/: ComplexMeshShader.frag  ComplexMeshShader.vert
app/shaders/glsl/simplemesh/: SimpleMeshShader.frag  SimpleMeshShader.vert
